--- a/views/mancala.erb
+++ b/views/mancala.erb
@@ -6,6 +6,7 @@
     </style>
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="https://rawgithub.com/mrdoob/three.js/master/build/three.js"></script>
+    <script src="/orbit_controls.js"></script>
     <script src="/mancala.js"></script>
   </head>
   <body>
