Add random javascript player for testing

--- a/views/mancala.erb
+++ b/views/mancala.erb
@@ -27,10 +27,12 @@
   </head>
   <body data-game-id="<%= game %>">
     <div id="player0" class="player">
-      id: <%= player0 %>
+      <p>id: <%= player0 %></p>
+      <p><a href="#" class="random-player" data-player-id="<%= player0 %>">start random player</a></p>
     </div>
     <div id="player1" class="player">
-      id: <%= player1 %>
+      <p>id: <%= player1 %></p>
+      <p><a href="#" class="random-player" data-player-id="<%= player1 %>">start random player</a></p>
     </div>
   </body>
 </html>
